Fixed simnpleHeader icon alginment on smaller screens

--- a/src/components/SimpleHeader/SimpleHeader.scss
+++ b/src/components/SimpleHeader/SimpleHeader.scss
@@ -1,5 +1,9 @@
 .SimpleHeader {
   padding: #{$spacing * 4} 0;
+
+  @media screen and (max-width: $bpLarge) {
+    padding: #{$spacing * 2} 0;
+  }
 }
 
 .SimpleHeader--Logo {
